--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -84,6 +84,11 @@
 	line-height: 34px;
 	color: var( --cw );
 }
+#infoRange {
+	--gloss: radial-gradient( 225% 90% at 100% 0%, hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
+	--wkgloss: -webkit-radial-gradient( 100% 0%, 225% 90%,   hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
+	--track: linear-gradient( 90deg, var( --cg ) 20px, #000000 20px, #000000 calc( 100% - 20px ), var( --cg ) 20px );
+}
 #infoRange input {
 	height: 40px;
 	width: 300px;
@@ -99,8 +104,8 @@
 	margin-top: -20px;
 	border: none;
 	border-radius: 4px;
-	background:         radial-gradient( 225% 90% at 100% 0%, hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
-	background: -webkit-radial-gradient( 100% 0%, 225% 90%,   hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
+	background: var( --gloss );
+	background: var( --wkgloss );
 	background-color: var( --cm );
 	-webkit-appearance: none;
 	box-shadow: -2px 2px 4px #000000;
@@ -110,8 +115,8 @@
 	width: 40px;
 	border: none;
 	border-radius: 4px;
-	background:         radial-gradient( 225% 90% at 100% 0%, hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
-	background: -webkit-radial-gradient( 100% 0%, 225% 90%,   hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
+	background: var( --gloss );
+	background: var( --wkgloss );
 	background-color: var( --cm );
 	box-shadow: -2px 2px 4px #000000;
 }
@@ -124,19 +129,15 @@
 #infoRange input::-webkit-slider-runnable-track {
 	width: 100%;
 	height: 3px;
-	transition : all 2s;
-	border-radius: 0px;
-	background: #000000;
+	background: var( --track );
 }
 #infoRange input:focus::-webkit-slider-runnable-track {
-	background: #000000;
+	background: var( --track );
 }
 #infoRange input::-moz-range-track {
 	width: 100%;
 	height: 3px;
-	transition : all 2s;
-	background: #000000;
-	border-radius: 0px;
+	background: var( --track );
 }
 #infoRange .value {
 	height: 30px;
