--- a/srv/http/assets/css/colors.css
+++ b/srv/http/assets/css/colors.css
@@ -1,43 +1,26 @@
 :root {
-	--cd:   hsl(200,100%,35%); /* default main */
-	--cw:   hsl(0,0%,90%);     /* white */
-	--cml:  hsl(200,100%,40%); /* main-light */
-	--cm:   hsl(200,100%,35%); /* main */
-	--cma:  hsl(200,100%,30%); /* main-active */
-	--cmd:  hsl(200,100%,20%); /* main-dark */
-	--cg75: hsl(200,3%,75%);   /* gray-75% */
-	--cg70: hsl(200,3%,70%);   /* gray-70% */
-	--cg60: hsl(200,3%,60%);   /* gray-60% */
-	--cgl:  hsl(200,3%,40%);   /* gray-light */
-	--cg:   hsl(200,3%,30%);   /* gray */
-	--cga:  hsl(200,3%,20%);   /* gray-active */
-	--cgd:  hsl(200,3%,10%);   /* gray-dark */
+	--cd   : hsl(200,100%,35%); /* default main */
+	--cw   : hsl(0,0%,90%);     /* white */
+	--cml  : hsl(200,100%,40%); /* main-light */
+	--cm   : hsl(200,100%,35%); /* main */
+	--cma  : hsl(200,100%,30%); /* main-active */
+	--cmd  : hsl(200,100%,20%); /* main-dark */
+	--cg75 : hsl(200,3%,75%);   /* gray-75% */
+	--cg70 : hsl(200,3%,70%);   /* gray-70% */
+	--cg60 : hsl(200,3%,60%);   /* gray-60% */
+	--cgl  : hsl(200,3%,40%);   /* gray-light */
+	--cg   : hsl(200,3%,30%);   /* gray */
+	--cga  : hsl(200,3%,20%);   /* gray-active */
+	--cgd  : hsl(200,3%,10%);   /* gray-dark */
 }
 
-bl, .bl {
-	color: var( --cm ) !important
-}
-bll {
-	color: var( --cml ) !important;
-}
-gr, .gr {
-	color: var( --cg60 ) !important
-}
-grn, .grn {
-	color: #0f0
-}
-red, .red {
-	color: #f00
-}
-.yl {
-	color: yellow
-}
-wh, .wh {
-	color: var( --cw ) !important
-}
-.bgr {
-	background: var( --cgd ) !important
-}
-.bgr60 {
-	background-color: var( --cg60 ) !important
-}
+bl,.bl    { color : var( --cm ) !important }
+bll       { color : var( --cml ) !important }
+gr, .gr   { color : var( --cg60 ) !important }
+grn, .grn { color : #0f0 }
+red, .red { color : #bb2828 }
+.yl       { color : yellow }
+wh, .wh   { color : var( --cw ) !important }
+
+.bgr      { background       : var( --cgd ) !important }
+.bgr60    { background-color : var( --cg60 ) !important }
