--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -108,7 +108,6 @@ i.map.disabled, .map.disabled i {
 }
 .menu .sub {
 	width: calc( 100% - 40px );
-	border-right: 1px solid var( --cga );
 }
 .menu a {
 	display: inline-block;
@@ -134,6 +133,7 @@ i.map.disabled, .map.disabled i {
 .submenu {
 	float: right;
 	border-top: 1px solid var( --cga );
+	border-left: 1px solid var( --cga );
 }
 #settings {
 	position: fixed;
