--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -58,6 +58,7 @@
 #infoContent .selectric-wrapper {
 	margin: 0;
 	min-width: 60px;
+	font-size: 16px;
 }
 #infoContent .selectric-items ul {
 	color: var( --cw );
