--- a/srv/http/assets/css/equalizer.css
+++ b/srv/http/assets/css/equalizer.css
@@ -36,11 +36,10 @@
 #eq .selectric-wrapper,
 #eq .selectric,
 #eq .selectric-items { 
-	width: var( --eqPresetW ) !important;
-	max-width: 200px;
+	width: calc( var( --eqBandW ) * 4 ) !important;
 }
 #eqname,
-#eq .selectric-wrapper { margin: 0 10px !important }
+#eq .selectric-wrapper { margin: 0 calc( var( --eqBandW ) / 2 ) !important }
 @media ( max-width: 530px ) {
 	#eq input::-webkit-slider-thumb { width : var( --eqThumbW ) }
 	#eq input::-moz-range-thumb     { width : var( --eqThumbW ) }
@@ -61,6 +60,7 @@
 	width: 100% !important;
 	left: 50%;
 	transform: translateX( -50% );
+	font-size: 0; /* force no space between inline-block */
 	z-index: 1;
 }
 #eq .vertical {
