--- a/srv/http/assets/css/equalizer.css
+++ b/srv/http/assets/css/equalizer.css
@@ -4,7 +4,6 @@
 	--eqBandW   : 50px;
 	--eqAllH    : calc( var( --eqSliderH ) + 65px ); /* console H = 25 + sliderW + 40 */
 	--eqSliderT : calc( ( var( --eqSliderH ) - var( --eqBandW ) * 10 ) / 2 ); /* ( sliderW - sliderH x 10 ) / 2 */
-	--eqFlatT   : calc( ( 100% - 40px ) / 10 ); /* 0-100 : sliderW - slider thumbH | 60% = shift 10% from 50% */
 	--eqBottomT : calc( var( --eqSliderH ) + 10px );
 	--eqPresetW : calc( var( --eqBandW ) * 5 );
 }
@@ -27,7 +26,6 @@
 /* size - position */
 #eq                   { height      : var( --eqAllH )     }
 #eq .hz a, #eq i      { width       : var( --eqBandW )    }
-#eq .vertical::before { margin-left : var( --eqFlatT )    } /* flat line - from center */
 #eq .vertical         { top         : var( --eqSliderT );
                         width       : var( --eqSliderH ); }
 #eq input             { height      : var( --eqBandW )    }
@@ -75,7 +73,7 @@
 	content: '';
 	width: 1px;
 	height: 100%;
-	background: #000000;
+	background: var( --cgl );
 }
 #eq input {
 	display: block;
