--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -1,5 +1,5 @@
-#listwlscan .fa-lock { font-size: 16px; vertical-align: 1px; }
-
+#listwlscan .fa-lock { font-size: 16px; vertical-align: 1px }
+.container .selectric-wrapper { height: 40px }
 .menu {
 	position: absolute;
 	margin-left: 40px;
