--- a/srv/http/assets/css/common.css
+++ b/srv/http/assets/css/common.css
@@ -226,6 +226,7 @@ input::-moz-focus-inner {
 .fa-sliders::before { content: "\f50B" }
 .fa-snapcast::before { content: "\f587" }
 .fa-snapclient::before { content: "\f587" }
+.fa-song::before { content: "\f54A" }
 .fa-soundprofile::before { content: "\f576" }
 .fa-source::before { content: "\f529" }
 .fa-spotify::before { content: "\f588" }
