--- a/srv/http/assets/css/common.css
+++ b/srv/http/assets/css/common.css
@@ -138,8 +138,8 @@ input::-moz-focus-inner {
 .fa-features::before { content: "\f50B" }
 .fa-file-music::before { content: "\f549" }
 .fa-file-playlist::before { content: "\f548" }
-.fa-firefox::before {content: "\f589"; position: absolute; color: var( --cgl ); }
-.fa-firefox::after {content: "\f58A"; position: relative; } /* position: relative - fix order */
+.fa-firefox::before { content: "\f589"; position: absolute; color: var( --cgl ); }
+.fa-firefox::after { content: "\f58A"; position: relative; }
 .fa-flash::before { content: "\f566" }
 .fa-folder::before { content: "\f540" }
 .fa-folder-cascade::before { content: "\f54A" }
