--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -459,7 +459,7 @@ hr {
 #infoContent input[type=password] {
 	display: inline-block;
 	margin: 0;
-	width: 230px;
+	width: 100%;
 	height: 36px !important;
 	padding: 10px 9px;
 	color: var( --cw );
